Hack to fix visibility of applications in virkailija readonly view

--- a/resources/less/virkailija-application.less
+++ b/resources/less/virkailija-application.less
@@ -340,6 +340,7 @@ and (max-width: 1000px) {
   border-top: solid @review-separator-color 1px;
   padding: 15px;
   width: 360px;
+  margin-left: 35px;
   .application-handling-webkit-scrollbar-mixin;
 }
 
@@ -353,7 +354,7 @@ and (max-width: 1000px) {
 }
 
 .application-handling__floating-application-review-placeholder {
-  width: 587px;
+  width: 679px;
   visibility: hidden;
 }
 
